# series_temporais

./: .gitignore  README.md  pyproject.toml  series_temporais.ipynb
